# reward-curves

./: Kaggle_Instructions.md  environment.yaml  rewards.ipynb  setup.py  usage.md
configs/: config.yaml  seeds.yaml
configs/experiment/: curvature_regularized_dpo.yaml  dpo_baseline.yaml  sft.yaml
configs/model/: pythia-410m.yaml
dpo-curvature/: README.md  SPEC.md  environment.yml  pyproject.toml
dpo-curvature/configs/: base.yaml  seeds.yaml
dpo-curvature/scripts/: 00_env_check.sh
dpo-curvature/src/dpocurv/: __init__.py  types.py
dpo-curvature/src/dpocurv/cli/: __init__.py
dpo-curvature/src/dpocurv/data/: __init__.py
dpo-curvature/src/dpocurv/eval/: __init__.py
dpo-curvature/src/dpocurv/models/: __init__.py
dpo-curvature/src/dpocurv/training/: __init__.py
dpo-curvature/src/dpocurv/utils/: __init__.py  checkpoint.py  io.py  logging.py  seed.py
dpo-curvature/tests/: test_smoke.py
scripts/: kaggle_prepare_gpu.py
src/curvature_dpo/: __init__.py
src/curvature_dpo/cli/: analyze_results.py  run_experiment.py  sanity_check.py
src/curvature_dpo/data/: probe_set.py  splits.py  ultrafeedback.py
src/curvature_dpo/eval/: calibration.py  curvature.py  eval_protocol.py  generate.py  landscape.py  overopt.py  score.py
src/curvature_dpo/models/: policy.py  reward_model.py
src/curvature_dpo/training/: dpo_trainer.py  functional.py  regularized_trainer.py  runtime.py  sft_trainer.py
src/curvature_dpo/utils/: analysis.py  artifacts.py  dashboard.py  device.py  logging.py  seed.py  telemetry.py  tracking.py
tests/: test_smoke.py
(+21 files in other folders)
